fix: Renamed releases folder, made Releases Server rendered

--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
@@ -19,8 +19,8 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Inventar
             </NavLink>
 
-            <NavLink class="nav-link" href="Releases">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Releases
+            <NavLink class="nav-link" href="ReleasesComponent">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ReleasesComponent
             </NavLink>
             
             <NavLink class="nav-link" href="User">
