--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/MainLayout.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/MainLayout.razor
@@ -7,6 +7,7 @@
 
     <main>
         <div class="top-row px-4">
+            <LoginDisplay />
             <NavLink class="nav-link" href="about">About</NavLink>
         </div>
 
