--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
@@ -19,8 +19,8 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Inventar
             </NavLink>
 
-            <NavLink class="nav-link" href="ReleasesComponent">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ReleasesComponent
+            <NavLink class="nav-link" href="Releases">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Releases
             </NavLink>
             
             <NavLink class="nav-link" href="User">
@@ -30,9 +30,9 @@
             <NavLink class="nav-link" href="ApiKeys">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> API Keys
             </NavLink>
-                        <NavLink class="nav-link" href="Help">
-                            <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dokumentation
-                        </NavLink>
+            <NavLink class="nav-link" href="Help">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dokumentation
+            </NavLink>
 
         </div>
     </nav>
