--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Help.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Help.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Help"
+@attribute [Authorize]
 <h3>Help</h3>
 <div class="rounded-2 alert-light p-3 mt-5 mb-5" style="border: gray 1px solid;">
     <h4>Dokumentation</h4>
