--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/_Imports.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using virtualmuseum.web.api.Components
 @using Radzen
 @using Radzen.Blazor
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
