--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
@@ -5,14 +5,28 @@
 @using virtualmuseum.web.data
 @using virtualmuseum.web.api.Services
 @inject IConfigurationRepository ConfigurationRepository
+@inject ICustomRoleService CustomRoleService
 
 <h3>Inventar</h3>
-<div class="rounded-2 alert-light p-3 mt-5 mb-5" style="border: gray 1px solid;">
-    <h4>Inventar Verwaltung</h4>
-    <RadzenTree Data=@_rooms Expand="@ExpandTree" @bind-Value="@_selectedItem" Change="@OnChange">
-        <RadzenTreeLevel Text="@GetTextForNode"/>
-    </RadzenTree>
-</div>
+
+@if (!CustomRoleService.HasRole("Administrator") && !CustomRoleService.HasRole("Contributor"))
+{
+    <div class="rounded-2 alert-danger p-3 mt-5 mb-5" style="border: gray 1px solid;">
+        <h4>Access Denied</h4>
+        <p>&nbsp;</p>
+        <p>Sorry, you are not authorized to access this page.</p>
+    </div>
+}
+else
+{
+
+    <div class="rounded-2 alert-light p-3 mt-5 mb-5" style="border: gray 1px solid;">
+        <h4>Inventar Verwaltung</h4>
+        <RadzenTree Data=@_rooms Expand="@ExpandTree" @bind-Value="@_selectedItem" Change="@OnChange">
+            <RadzenTreeLevel Text="@GetTextForNode"/>
+        </RadzenTree>
+    </div>
+}
 
 @code {
 
