--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
@@ -23,6 +23,9 @@
                 <NavLink class="nav-link" href="Inventory">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Inventar
                 </NavLink>
+                <NavLink class="nav-link" href="MultiMediaPresentation">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Präsentationen
+                </NavLink>
 
                 <NavLink class="nav-link" href="Releases">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Releases
