--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
@@ -11,11 +11,7 @@
 
 @if (!CustomRoleService.HasRole("Administrator") && !CustomRoleService.HasRole("Contributor"))
 {
-    <div class="rounded-2 alert-danger p-3 mt-5 mb-5" style="border: gray 1px solid;">
-        <h4>Access Denied</h4>
-        <p>&nbsp;</p>
-        <p>Sorry, you are not authorized to access this page.</p>
-    </div>
+    <AccessDeniedComponent />
 }
 else
 {
@@ -30,17 +26,15 @@ else
 
 @code {
 
+    private List<Room> _rooms = [];
+    private object _selectedItem = null!;
+    private List<string> _debugMessages = ["Starting"];
+
     private void Log(string message)
     {
         _debugMessages.Insert(0, message);
         _debugMessages = _debugMessages.Take(30).ToList();
     }
-
-
-    private List<Room> _rooms = [];
-
-    private List<string> _debugMessages = ["Starting"];
-    private object _selectedItem = null!;
 
     void OnChange()
     {
@@ -89,17 +83,8 @@ else
                 var locationTimeRow = (LocationTimeRow)args.Value;
                 args.Children.Data = locationTimeRow.GeoEvents;
                 args.Children.Text = GetTextForNode;
-                args.Children.HasChildren = (geoEvent) => (geoEvent as GeoEvent)!.MediaFiles.Count > 0;
+                args.Children.HasChildren = (geoEvent) => (geoEvent as GeoEvent)!.MultimediaPresentationId != null;
                 Log($"LocationTimeRow: {locationTimeRow.Label}");
-                args.Children.Template = value => _testFragment(value);
-                break;
-
-
-            case { } t when t == typeof(GeoEvent):
-                var geoEvent = (GeoEvent)args.Value;
-                args.Children.Data = geoEvent.MediaFiles;
-                args.Children.Text = GetTextForNode;
-                args.Children.HasChildren = (_) => false;
                 args.Children.Template = value => _testFragment(value);
                 break;
         }
@@ -133,4 +118,5 @@ else
         builder.AddContent(3, context.Text);
     };
 
+    }
 }
