feat: add multiple time series

--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
@@ -73,7 +73,7 @@ else
     //         case { } t when t == typeof(InventoryPlacement):
     //             var inventoryPlacement = (InventoryPlacement)args.Value;
     //             var tableId = inventoryPlacement.InventoryItem!.Id;
-    //             var locationTimeRows = ConfigurationRepository.GetTopographicalTableConfiguration(tableId).GeoEventGroups;
+    //             var locationTimeRows = ConfigurationRepository.GetTopographicalTableConfiguration(tableId).TimeSeries;
     //             args.Children.Data = locationTimeRows;
     //             args.Children.Text = GetTextForNode;
     //             args.Children.HasChildren = (locationTimeRow) => (locationTimeRow as GeoEventGroup)!.GeoEvents.Count > 0;
