--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Error.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Error.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Error"
 @using System.Diagnostics
 @using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 @inject ICustomRoleService CustomRoleService
 @attribute [Authorize]
 
