--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Help.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Help.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Help"
 @using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 @attribute [Authorize]
 @inject ICustomRoleService CustomRoleService
 <h3>Help</h3>
