--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Home.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 
 @inject ICustomRoleService CustomRoleService
 <PageTitle>Home</PageTitle>
