--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/Inventory/Inventory.razor
@@ -4,6 +4,7 @@
 @attribute [Authorize]
 @using virtualmuseum.web.data
 @using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 @using virtualmuseum.web.api.Services.ConfigurationRepository
 @inject IConfigurationRepository ConfigurationRepository
 @inject ICustomRoleService CustomRoleService
