--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/ReleasesComponent/Releases.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/ReleasesComponent/Releases.razor
@@ -1,7 +1,9 @@
 ﻿@page "/Releases"
 @rendermode InteractiveServer
 @using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 @using virtualmuseum.web.api.Services.Model
+@using virtualmuseum.web.api.Services.ReleaseService
 
 @inject IReleaseService ReleaseService
 @inject ICustomRoleService CustomRoleService
