--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/User.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/User.razor
@@ -1,5 +1,6 @@
 ﻿@page "/User"
 @using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 @rendermode InteractiveServer
 @inject IUserRoleService UserRoleService
 @inject ICustomRoleService CustomRoleService
