--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using virtualmuseum.web.api.Services
+@using virtualmuseum.web.api.Services.Admin
 @inject ICustomRoleService CustomRoleService
 
 <div class="top-row ps-3 navbar navbar-dark">
