--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/App.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/App.razor
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="virtualmuseum.web.api.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <HeadOutlet />
 </head>
