--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/MediaFiles/MediaFiles.razor
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Components/Pages/MediaFiles/MediaFiles.razor
@@ -131,7 +131,7 @@ else
         var newMediaFile = new MediaFile
         {
             Id = Guid.NewGuid().ToString(),
-            Name = "Neues Medium",
+            Name = "",
             Type = MediaType.Image2D, 
             Url = "",
             Description = "",
